tests/ui/unique_ptr_to_opaque.stderr
error[E0271]: type mismatch resolving `<outside::C as ExternType>::Kind == Trivial`
  --> tests/ui/unique_ptr_to_opaque.rs:22:5
   |
22 |     cxx::UniquePtr::new(outside::C { a: 4 });
   |     ^^^^^^^^^^^^^^^^^^^ expected enum `Trivial`, found enum `cxx::kind::Opaque`
   |
note: required by `UniquePtr::<T>::new`
  --> src/unique_ptr.rs
   |
   | /     pub fn new(value: T) -> Self
   | |     where
   | |         T: ExternType<Kind = Trivial>,
   | |______________________________________^
